# bpack

./: .gitignore  Cargo.toml  README.md  codes  decode  some.json  some.txt  tree
example/: some.rs
src/: heap.rs  huffman.rs  lib.rs  utils.rs
src/pack/: count.rs  encode.rs  mod.rs  node.rs  topology.rs  tree.rs
src/unpack/: mod.rs  node.rs  result_src.rs  table.rs  tree.rs
tests/: i_test.rs  integration_test.rs
