[package]
name = "bpack"
version = "0.1.1"
authors = ["Kairat Abylkasymov <kairat.forwork@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Fast, simple and easy to use data compression library meant to work with byte slices of String and str types."
repository = "https://github.com/exellife/bpack"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
rand = "0.7.3"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0"

[dependencies]

